@@ -1,10 +1,8 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.36 2007-10-25 16:45:47 chu11 Exp $
+## $Id: Makefile.am,v 1.37 2008-04-18 15:55:21 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
-
-man1_MANS = cerebro.1
 
 man3_MANS  = libcerebro.3 \
 	     cerebro_handle_create.3 \
@@ -58,6 +56,8 @@ man3_MANS  = libcerebro.3 \
 
 man5_MANS  = cerebro.conf.5
  
+man7_MANS  = cerebro.7
+
 man8_MANS  = cerebro-admin.8 \
 	     cerebro-stat.8 \
 	     cerebrod.8
