@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: cerebro.1,v 1.3 2008-03-28 17:06:47 chu11 Exp $
+.\"$Id: cerebro.7,v 1.1 2008-04-18 15:55:21 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2005-2007 The Regents of the University of California.
@@ -23,7 +23,7 @@
 .\"  You should have received a copy of the GNU General Public License along
 .\"  with Cerebro.  If not, see <http://www.gnu.org/licenses/>.
 .\"#############################################################################
-.TH cerebro 1 "Oct 2007" "cerebro" cerebro
+.TH cerebro 8 "Oct 2007" "cerebro" cerebro
 .SH "NAME"
 cerebro \- cluster monitoring tools and libraries
 .SH "DESCRIPTION"
