@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: cerebro_module.3.in,v 1.23 2008-03-28 17:06:47 chu11 Exp $
+.\"$Id: cerebro_module.3.in,v 1.24 2008-04-18 15:55:21 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2005-2007 The Regents of the University of California.
@@ -23,9 +23,9 @@
 .\"  You should have received a copy of the GNU General Public License along
 .\"  with Cerebro.  If not, see <http://www.gnu.org/licenses/>.
 .\"#############################################################################
-.TH LIBCEREBRO 3 "May 2005" "LLNL" "LIBCEREBRO"
+.TH CEREBRO_MODULE 3 "May 2005" "LLNL" "CEREBRO_MODULE"
 .SH "NAME" 
-libcerebro \- Introduction to cerebro modules
+cerebro_module \- Introduction to cerebro modules
 .SH CLUSTERLIST MODULES
 
 In order for
