@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: cerebro_module_devel.3.in,v 1.28 2008-03-28 17:06:47 chu11 Exp $
+.\"$Id: cerebro_module_devel.3.in,v 1.29 2008-04-18 15:55:21 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2005-2007 The Regents of the University of California.
@@ -23,9 +23,9 @@
 .\"  You should have received a copy of the GNU General Public License along
 .\"  with Cerebro.  If not, see <http://www.gnu.org/licenses/>.
 .\"#############################################################################
-.TH LIBCEREBRO 3 "May 2005" "LLNL" "LIBCEREBRO"
+.TH CEREBRO_MODULE_DEVEL 3 "May 2005" "LLNL" "CEREBRO_MODULE_DEVEL"
 .SH "NAME"
-libcerebro \- Introduction to writing cerebro modules
+cerebro_module_devel \- Introduction to writing cerebro modules
 .SH "SYNOPSIS"
 .B #include <cerebro/cerebro_clusterlist_module.h>
 .sp
