@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: libcerebro.3,v 1.25 2008-03-28 17:06:47 chu11 Exp $
+.\"$Id: libcerebro.3,v 1.26 2008-04-18 15:55:21 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2005-2007 The Regents of the University of California.
@@ -78,7 +78,7 @@ or down
 .sp
 .BI "int cerebro_update_metric_value(cerebro_t handle, const char *metric_name, unsigned int metric_value_type, unsigned int metric_value_len, void *metric_value);"
 .sp
-.BI "int cerebro_restart_metric(cerebro_t handle, const char *metric_name);"
+.BI "int cerebro_resend_metric(cerebro_t handle, const char *metric_name);"
 .sp
 .BI "int cerebro_namelist_length(cerebro_namelist_t namelist);"
 .sp
@@ -145,7 +145,7 @@ cerebro_set_timeout_len(3), cerebro_get_flags(3),
 cerebro_set_flags(3), cerebro_get_metric_names(3),
 cerebro_get_metric_data(3), cerebro_register_metric(3),
 cerebro_unregister_metric(3), cerebro_update_metric_value(3),
-cerebro_restart_metric(3), cerebro_namelist_length(3),
+cerebro_resend_metric(3), cerebro_namelist_length(3),
 cerebro_namelist_destroy(3), cerebro_namelist_iterator_create(3),
 cerebro_namelist_iterator_name(3),
 cerebro_namelist_iterator_next(3),
